force-app/main/default/objects/BGBK__Receipt_Refund__c/BGBK__Receipt_Refund__c.object-meta.xml
<CustomObject>
    <label>Receipt Refund</label>
    <nameField>
        <label>Receipt Refund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receipt Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>