force-app/main/default/objects/BGBK__Receipt_Refund__c/fields/BGBK__Receipt__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt</label>
    <referenceTo>MUSW__Receipt__c</referenceTo>
    <relationshipLabel>Receipt Refunds</relationshipLabel>
    <relationshipName>Receipt_Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>