force-app/main/default/objects/BGBK__Receipt_Refund__c/fields/Refundee__c.field-meta.xml
<CustomField>
    <fullName>Refundee__c</fullName>
    <formula>HYPERLINK("/"+BGBK__Refund2__r.BGBK__Contact__r.Id , BGBK__Refund2__r.BGBK__Contact__r.LastName + ", "+  BGBK__Refund2__r.BGBK__Contact__r.FirstName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refundee</label>
    <type>Text</type>
</CustomField>